Develop (#22)
* Preparado para el merge a develop y despues a main

---------

Co-authored-by: Santiago Paván <spyaquinta@gmail.com>
Co-authored-by: leor97 <elleo1190@gmail.com>